working on services page

--- a/src/shared/tailwind.global.css
+++ b/src/shared/tailwind.global.css
@@ -121,7 +121,11 @@
     }
 
     .services-modal-left {
-        @apply -top-1 -left-1
+        @apply -top-1 -left-1 right-auto
+    }
+
+    .services-modal-right {
+        @apply -top-1 -right-1 left-auto
     }
 
     .skip-link {
