working on services page 3

--- a/src/shared/tailwind.global.css
+++ b/src/shared/tailwind.global.css
@@ -113,19 +113,39 @@
     }
 
     .services-div {
-        @apply relative flex items-center justify-center w-[156px] h-[156px]
+        @apply relative flex items-center justify-center w-[156px] md:w-[173px] xl:w-[198px] h-[156px] md:h-[147px] xl:h-[168px] cursor-pointer
     }
 
-    .services-modal {
-        @apply bg-primary-2 absolute z-50 text-white w-[248px] h-[248px]
+    .services-div-contact {
+        @apply relative flex items-center justify-center w-[156px] md:w-[560px] xl:w-[640px] h-[156px] md:h-[147px] xl:h-[168px] cursor-pointer md:col-span-3
+    }
+
+    .services-modal-close {
+        @apply bg-primary-2 absolute z-50 text-white w-[248px] h-[248px] hidden opacity-0 flex-col justify-between items-center
+    }
+
+    .services-modal-open-left {
+        @apply bg-primary-2 absolute z-50 text-white w-[248px] h-[248px] flex opacity-100 flex-col justify-between items-center -top-1 md:-top-2 xl:-top-3 -left-1 md:-left-2 xl:-left-3 right-auto
+    }
+
+    .services-modal-open-right {
+        @apply bg-primary-2 absolute z-50 text-white w-[248px] h-[248px] flex opacity-100 flex-col justify-between items-center -top-1 md:-top-2 xl:-top-3 -right-1 md:-right-2 xl:-right-3 left-auto
+    }
+
+    .services-modal-open-left-center {
+        @apply bg-primary-2 absolute z-50 text-white w-[248px] h-[248px] flex opacity-100 flex-col justify-between items-center -top-1 md:-top-2 xl:-top-3 -left-1 md:left-auto right-auto
+    }
+
+    .services-modal-open-right-center {
+        @apply bg-primary-2 absolute z-50 text-white w-[248px] h-[248px] flex opacity-100 flex-col justify-between items-center -top-1 md:-top-2 xl:-top-3 -right-1 md:right-auto left-auto
     }
 
     .services-modal-left {
-        @apply -top-1 -left-1 right-auto
+        @apply -top-1 md:-top-2 xl:-top-3 -left-1 md:-left-2 xl:-left-3 right-auto
     }
 
     .services-modal-right {
-        @apply -top-1 -right-1 left-auto
+        @apply -top-1 md:-top-2 xl:-top-3 -right-1 md:-right-2 xl:-right-3 left-auto
     }
 
     .skip-link {
