--- a/src/shared/tailwind.global.css
+++ b/src/shared/tailwind.global.css
@@ -116,11 +116,11 @@
         @apply relative flex items-center justify-center w-[156px] md:w-[173px] xl:w-[198px] h-[156px] md:h-[147px] xl:h-[168px] cursor-pointer select-none
     }
 
-    .services-div-contact {
+    .services-div:last-child {
         @apply relative flex items-center justify-center w-[156px] md:w-[560px] xl:w-[640px] h-[156px] md:h-[147px] xl:h-[168px] cursor-pointer md:col-span-3
     }
 
-    .services-modal-close {
+    /* .services-modal-close {
         @apply bg-primary-2 absolute z-50 text-white w-[248px] h-[248px] flex-col justify-between items-center hidden
     }
 
@@ -138,6 +138,34 @@
 
     .services-modal-open-right-center {
         @apply bg-primary-2 absolute z-50 text-white w-[248px] h-[248px] flex flex-col justify-between items-center -top-1 md:-top-2 xl:-top-3 -right-1 md:right-auto left-auto
+    } */
+
+    .services-modal {
+        @apply bg-primary-2 absolute z-50 text-white w-[248px] h-[248px] flex-col justify-between items-center flex
+    }
+
+    /* .services-modal[data-open="true"] {
+        @apply z-50
+    }
+
+    .services-modal[data-open="false"] {
+        @apply -z-50
+    } */
+
+    .services-div:nth-child(4n+1) .services-modal {
+        @apply -top-1 md:-top-2 xl:-top-3 -left-1 md:-left-2 xl:-left-3 right-auto
+    }
+
+    .services-div:nth-child(4n+2) .services-modal {
+        @apply -top-1 md:-top-2 xl:-top-3 -right-1 md:right-auto left-auto
+    }
+
+    .services-div:nth-child(4n+3) .services-modal {
+        @apply -top-1 md:-top-2 xl:-top-3 -left-1 md:left-auto right-auto
+    }
+
+    .services-div:nth-child(4n+4) .services-modal {
+        @apply -top-1 md:-top-2 xl:-top-3 -right-1 md:-right-2 xl:-right-3 left-auto
     }
 
     .services-modal-left {
@@ -334,19 +362,23 @@ textarea:focus {
 }
 
 
+
 /* SERVICES ANIMATION */
 
- 
-
-.services-modal-close {
+.services-modal {
     scale: .1;
-    transition: scale 2s ease-out;
+    opacity: 0;
+    z-index: -50;
+    transition: scale 200ms ease-out,
+                opacity 200ms ease-in,
+                z-index 200ms step-end;
 }
 
-.services-modal-open-left,
-.services-modal-open-left-center,
-.services-modal-open-right,
-.services-modal-open-right-center {
+.services-modal[data-open="true"] {
     scale: 1;
-    transition: scale 2s ease-out;
+    opacity: 1;
+    z-index: 50;
+    transition: scale 200ms ease-out,
+                opacity 200ms ease-in,
+                z-index 200ms step-start;
 }
