--- a/src/shared/tailwind.global.css
+++ b/src/shared/tailwind.global.css
@@ -112,6 +112,14 @@
         @apply pt-5 pb-5 xl:pt-9 xl:pb-9
     }
 
+    .sectors-div {
+        @apply relative flex flex-col items-center justify-center w-full md:w-[173px] xl:w-[198px] md:h-[147px] xl:h-[168px] cursor-pointer select-none
+    }
+
+    .sectors-modal {
+        @apply absolute z-50 w-[262px] h-[268px] flex-col justify-between items-center flex border-2 border-primary
+    }
+
     .services-div {
         @apply relative flex items-center justify-center w-[156px] md:w-[173px] xl:w-[198px] h-[156px] md:h-[147px] xl:h-[168px] cursor-pointer select-none
     }
@@ -120,37 +128,9 @@
         @apply relative flex items-center justify-center w-[156px] md:w-[560px] xl:w-[640px] h-[156px] md:h-[147px] xl:h-[168px] cursor-pointer md:col-span-3
     }
 
-    /* .services-modal-close {
-        @apply bg-primary-2 absolute z-50 text-white w-[248px] h-[248px] flex-col justify-between items-center hidden
-    }
-
-    .services-modal-open-left {
-        @apply bg-primary-2 absolute z-50 text-white w-[248px] h-[248px] flex flex-col justify-between items-center -top-1 md:-top-2 xl:-top-3 -left-1 md:-left-2 xl:-left-3 right-auto 
-    }
-
-    .services-modal-open-right {
-        @apply bg-primary-2 absolute z-50 text-white w-[248px] h-[248px] flex flex-col justify-between items-center -top-1 md:-top-2 xl:-top-3 -right-1 md:-right-2 xl:-right-3 left-auto
-    }
-
-    .services-modal-open-left-center {
-        @apply bg-primary-2 absolute z-50 text-white w-[248px] h-[248px] flex flex-col justify-between items-center -top-1 md:-top-2 xl:-top-3 -left-1 md:left-auto right-auto
-    }
-
-    .services-modal-open-right-center {
-        @apply bg-primary-2 absolute z-50 text-white w-[248px] h-[248px] flex flex-col justify-between items-center -top-1 md:-top-2 xl:-top-3 -right-1 md:right-auto left-auto
-    } */
-
     .services-modal {
         @apply bg-primary-2 absolute z-50 text-white w-[248px] h-[248px] flex-col justify-between items-center flex
     }
-
-    /* .services-modal[data-open="true"] {
-        @apply z-50
-    }
-
-    .services-modal[data-open="false"] {
-        @apply -z-50
-    } */
 
     .services-div:nth-child(4n+1) .services-modal {
         @apply -top-1 md:-top-2 xl:-top-3 -left-1 md:-left-2 xl:-left-3 right-auto
