--- a/src/shared/tailwind.global.css
+++ b/src/shared/tailwind.global.css
@@ -113,11 +113,19 @@
     }
 
     .sectors-div {
-        @apply relative flex flex-col items-center justify-center w-full md:w-[173px] xl:w-[198px] md:h-[147px] xl:h-[168px] cursor-pointer select-none
+        @apply relative flex flex-col items-center justify-between w-full md:w-[173px] xl:w-[198px] md:h-[147px] xl:h-[168px] cursor-pointer select-none
     }
 
     .sectors-modal {
-        @apply absolute z-50 w-[262px] h-[268px] flex-col justify-between items-center flex border-2 border-primary
+        @apply absolute z-50 w-[262px] h-[268px] flex-col justify-between items-center flex border-2 border-primary bg-white -top-1 md:left-auto md:right-auto md:top-auto
+    }
+
+    .sectors-div:nth-child(3n+1) .sectors-modal {
+        @apply left-1
+    }
+
+    .sectors-div:nth-child(3n+3) .sectors-modal {
+        @apply right-1
     }
 
     .services-div {
@@ -355,6 +363,28 @@ textarea:focus {
 }
 
 .services-modal[data-open="true"] {
+    scale: 1;
+    opacity: 1;
+    z-index: 50;
+    transition: scale 200ms ease-out,
+                opacity 200ms ease-in,
+                z-index 200ms step-start;
+}
+
+
+
+/* SECTORS ANIMATION */
+
+.sectors-modal {
+    scale: .1;
+    opacity: 0;
+    z-index: -50;
+    transition: scale 200ms ease-out,
+                opacity 200ms ease-in,
+                z-index 200ms step-end;
+}
+
+.sectors-modal[data-open="true"] {
     scale: 1;
     opacity: 1;
     z-index: 50;
