--- a/src/shared/tailwind.global.css
+++ b/src/shared/tailwind.global.css
@@ -13,7 +13,7 @@
     }
 
     .desktop-header-nav-items {
-        @apply xl:w-[144px] xl:border-r xl:border-black
+        @apply xl:w-[144px] xl:border-r xl:border-black h-full
     }
 
     .desktop-footer-headings {
@@ -85,7 +85,7 @@
     }
 
     .publications-menu-divs {
-        @apply border-2 border-primary-dark2 rounded-full md:rounded-none w-[48%] md:w-[24%] font-jose-600 md:font-light text-primary-dark2 md:text-white text-[9px] md:text-base leading-[9px] text-center my-1 md:mx-[1.5px] xl:mx-[1px] py-[7px] md:bg-primary  cursor-pointer
+        @apply border-2 border-primary-dark2 rounded-full md:rounded-none w-[48%] md:w-[24%] font-jose-600 md:font-normal text-primary-dark2 md:text-white text-[9px] md:text-base leading-[9px] text-center my-1 md:mx-[1.5px] xl:mx-[1px] py-[7px] md:bg-primary  cursor-pointer
     }
 
     .publications-menu-divs:first-child {
@@ -231,9 +231,52 @@ textarea:focus {
     color: white;
 }
 
+.background-blurred {
+    background-color: rgb(46, 53, 111, .5);
+    backdrop-filter: blur(4px);
+}
+
+.desktop-header-nav-items a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .publications-menu-hovered {
     background: hsla(233, 100%, 92%, 1);
 }
+
+/* #why-us-nav {
+    border: solid .2em color-mix(in srgb, transparent 50%, white);
+    background-origin: border-box;
+    background-clip: padding-box;
+}
+
+#why-us-nav:before {
+    width: calc(100% + .4em);
+    height: calc(100% + .4em);
+    backdrop-filter: blur(4px);
+    position: absolute;
+    z-index: -1;
+    top:-.2em;
+    right: 0;
+    bottom: 0;
+    left: -.2em;
+    border: inherit;
+    border-color: transparent;
+    background: inherit;
+    background-color: rgb(46, 53, 111, .5);
+    background-clip: border-box;
+    content: ''
+} */
+
+.why-us-nav-hovered {
+    background-color: #348CB0;
+}
+
+/* FONTS */
 
 .font-jose-200 {
     font-family: 'Josefin Sans';
@@ -352,41 +395,6 @@ textarea:focus {
 #mobile-menu-nav[data-open="true"] {
     transition: 200ms ease-in;
     transform: translateX(0px);
-}
-
-/* #why-us-nav {
-    backdrop-filter: blur(1px);
-    background-color: color-mix(in srgb, transparent 50%, white)
-} */
-
-#why-us-nav {
-    border: solid .2em color-mix(in srgb, transparent 50%, white);
-    background-origin: border-box;
-    background-clip: padding-box;
-}
-
-#why-us-nav:before {
-    width: calc(100% + .4em);
-    height: calc(100% + .4em);
-    backdrop-filter: blur(1px);
-    position: absolute;
-    z-index: -1;
-    /* go outside padding-box by 
-     * a border-width ($b) in every direction */
-    top:-.2em;
-    right: 0;
-    bottom: 0;
-    left: -.2em;
-    border: inherit;
-    border-color: transparent;
-    background: inherit;
-    background-color: rgb(46, 53, 111, .5);
-    background-clip: border-box;
-    content: ''
-}
-
-.why-us-nav-hovered {
-    background-color: #348CB0;
 }
 
 
